# Projet-Assistant--Reptiles

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Kconfig.projbuild  LICENSE  README.md  TODO.md  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.lcd  sdkconfig.touch
.github/workflows/: esp-idf.yml
components/backlight/: CMakeLists.txt  backlight.c
components/backlight/include/: backlight.h
components/board/: CMakeLists.txt  Kconfig  README.md
components/board/include/: board.h  board_backlight.h  board_internal.h  board_io_map.h  board_pins.h
components/board/src/: board.c  board_backlight.c
components/buttons/: CMakeLists.txt  buttons.c
components/buttons/include/: buttons.h
components/ch422g/: CMakeLists.txt  ch422g.c  ch422g.h
components/core/: CMakeLists.txt
components/core/include/: core_export.h  core_models.h  core_service.h  esp_check_compat.h
components/core/src/: core_export.c  core_service.c
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
components/io_extension_waveshare/: CMakeLists.txt  README.md  io_extension_waveshare.c  io_extension_waveshare.h
components/iot/: CMakeLists.txt
components/iot/include/: iot_manager.h
components/iot/src/: iot_manager.c
components/json/: CMakeLists.txt  idf_component.yml
components/json/include/: json_proxy.h
components/json/src/: json_proxy.c
components/keyboard/: CMakeLists.txt  keyboard.c
components/keyboard/include/: keyboard.h
components/logging/: CMakeLists.txt
components/logging/include/: logging.h
components/logging/src/: log_manager.c
components/menu/: CMakeLists.txt  menu.c
components/menu/include/: menu.h
components/net/: CMakeLists.txt  Kconfig
components/network/: CMakeLists.txt  network.c
components/power/: CMakeLists.txt  power.c
components/reptile_storage/: CMakeLists.txt
components/sdspi_ioext_host/: CMakeLists.txt  sdspi_ioext_host.c
components/storage_sd/: CMakeLists.txt  storage_sd.c
components/touch/: CMakeLists.txt  touch.c
components/ui/: CMakeLists.txt  Kconfig  ui.c
components/ui/include/: rgb_vsync_sync.h  ui.h  ui_alerts.h  ui_animal_details.h  ui_animal_form.h  ui_animals.h  ui_documents.h  ui_lockscreen.h  ui_logs.h  ui_reproduction.h  ui_settings.h  ui_web.h
components/ui/src/: rgb_vsync_sync.c  ui.c  ui_alerts.c  ui_animal_details.c  ui_animal_form.c  ui_animals.c  ui_dashboard.c  ui_documents.c  ui_lockscreen.c  ui_logs.c  ui_reproduction.c  ui_settings.c  ui_web.c
components/web_server/: CMakeLists.txt
main/: CMakeLists.txt  app_main.c  idf_component.yml
public/images/: README.md
tests/: CMakeLists.txt  test_display.c  test_keyboard.c  test_main.c  test_menu.c  test_network.c  test_power.c
tests/mocks/: mock_adc.c  mock_adc.h  mock_esp.c  mock_esp.h  mock_freertos.c  mock_freertos.h  mock_gpio.c  mock_gpio.h  mock_i2c.c  mock_i2c.h  mock_keyboard.c  mock_keyboard.h  mock_spi.c  mock_spi.h  mock_ui.c  mock_ui.h  mock_wifi.c  mock_wifi.h
tools/: no_binary_check.py
(+13 files in other folders)
